--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "osflab/osf",
     "description": "OpenStates Framework",
-    "version": "3.0.1-dev",
+    "version": "3.0.2-dev",
     "type": "library",
     "homepage": "https://github.com/osflab/osf",
     "license": "AGPL-3.0-or-later",
@@ -16,36 +16,36 @@
         "source": "https://github.com/osflab/osf"
     },
     "require": {
-        "cache/redis-adapter": "1.0",
-        "cache/simple-cache-bridge": "1.0",
-        "erusev/parsedown": "1.6.4",
+        "cache/redis-adapter": "^1.0",
+        "cache/simple-cache-bridge": "^1.0",
+        "erusev/parsedown": "^1.6.4",
         "ext-imagick": "*",
         "ext-mbstring": "*",
         "ext-openssl": "*",
         "ext-redis": "*",
-        "mobiledetect/mobiledetectlib": "2.8.30",
-        "patchwork/utf8": "1.3.1",
-        "php": "^7.1.0",
-        "phpoffice/phpspreadsheet": "1.1.0",
-        "psr/simple-cache": "1.0.0",
-        "soundasleep/html2text": "0.5.0",
-        "symfony/yaml": "3.4.4",
-        "tecnickcom/tcpdf": "6.2.16",
-        "twig/twig": "2.4.4",
-        "zendframework/zend-cache": "2.7.2",
-        "zendframework/zend-db": "2.9.2",
-        "zendframework/zend-filter": "2.7.2",
-        "zendframework/zend-form": "2.11",
-        "zendframework/zend-hydrator": "2.3.1",
-        "zendframework/zend-i18n": "2.7.4",
-        "zendframework/zend-i18n-resources": "2.5.2",
-        "zendframework/zend-paginator": "2.8.1",
-        "zendframework/zend-permissions-acl": "2.6.0",
-        "zendframework/zend-validator": "2.10.2",
-        "zendframework/zend-view": "2.10.0"
+        "mobiledetect/mobiledetectlib": "^2.8.30",
+        "patchwork/utf8": "^1.3.1",
+        "php": "^7.1.3",
+        "phpoffice/phpspreadsheet": "^1.1.0",
+        "psr/simple-cache": "^1.0.0",
+        "soundasleep/html2text": "^0.5.0",
+        "symfony/yaml": "^4.0",
+        "tecnickcom/tcpdf": "^6.2.16",
+        "twig/twig": "^2.4.4",
+        "zendframework/zend-cache": "~2.7.2",
+        "zendframework/zend-db": "~2.9.2",
+        "zendframework/zend-filter": "~2.7.2",
+        "zendframework/zend-form": "~2.11",
+        "zendframework/zend-hydrator": "~2.3.1",
+        "zendframework/zend-i18n": "~2.7.4",
+        "zendframework/zend-i18n-resources": "~2.5.2",
+        "zendframework/zend-paginator": "~2.8.1",
+        "zendframework/zend-permissions-acl": "~2.6.0",
+        "zendframework/zend-validator": "~2.10.2",
+        "zendframework/zend-view": "~2.10.0"
     },
     "require-dev": {
-        "zendframework/zend-code": "3.3.0"
+        "zendframework/zend-code": "~3.3.0"
     },
     "replace": {
         "osflab/application": "self.version",
@@ -63,6 +63,7 @@
         "osflab/filter": "self.version",
         "osflab/form": "self.version",
         "osflab/generator": "self.version",
+        "osflab/github": "self.version",
         "osflab/helper": "self.version",
         "osflab/image": "self.version",
         "osflab/log": "self.version",
@@ -79,7 +80,7 @@
     "suggest": {
         "ext-yaml": "For better performances",
         "zendframework/ZendPdf": "If you want to use this deprecated feature",
-        "zendframework/zend-authentication": "2.5.3"
+        "zendframework/zend-authentication": "~2.5.3"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
