--- a/src/Console/composer.json
+++ b/src/Console/composer.json
@@ -16,14 +16,15 @@
         "source": "https://github.com/osflab/console"
     },
     "require": {
-        "php": "^7.1.0"
+        "php": "^7.1.3"
     },
     "require-dev": {
-        "osflab/test": "~3.0.1"
+        "osflab/test": "~3.0.2"
     },
     "provide": {
-        "osflab/controller": "3.0.1",
-        "osflab/test": "3.0.1"
+        "osflab/controller": "3.0.2",
+        "osflab/github": "3.0.2",
+        "osflab/test": "3.0.2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
