--- a/src/Controller/composer.json
+++ b/src/Controller/composer.json
@@ -16,24 +16,24 @@
         "source": "https://github.com/osflab/controller"
     },
     "require": {
-        "php": "^7.1.0",
-        "osflab/console": "~3.0.1",
-        "osflab/application": "~3.0.1",
-        "osflab/generator": "~3.0.1",
-        "osflab/stream": "~3.0.1",
-        "osflab/container": "~3.0.1",
-        "osflab/exception": "~3.0.1"
+        "php": "^7.1.3",
+        "osflab/console": "~3.0.2",
+        "osflab/application": "~3.0.2",
+        "osflab/generator": "~3.0.2",
+        "osflab/stream": "~3.0.2",
+        "osflab/container": "~3.0.2",
+        "osflab/exception": "~3.0.2"
     },
     "require-dev": {
-        "osflab/test": "~3.0.1"
+        "osflab/test": "~3.0.2"
     },
     "provide": {
-        "osflab/application": "3.0.1",
-        "osflab/navigation": "3.0.1"
+        "osflab/application": "3.0.2",
+        "osflab/navigation": "3.0.2"
     },
     "suggest": {
-        "osflab/view": "~3.0.1",
-        "zendframework/zend-db": "2.9.2"
+        "osflab/view": "~3.0.2",
+        "zendframework/zend-db": "~2.9.2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
