--- a/src/Exception/composer.json
+++ b/src/Exception/composer.json
@@ -16,43 +16,44 @@
         "source": "https://github.com/osflab/exception"
     },
     "require": {
-        "php": "^7.1.0"
+        "php": "^7.1.3"
     },
     "require-dev": {
-        "osflab/test": "~3.0.1"
+        "osflab/test": "~3.0.2"
     },
     "provide": {
-        "osflab/application": "3.0.1",
-        "osflab/bean": "3.0.1",
-        "osflab/cache": "3.0.1",
-        "osflab/config": "3.0.1",
-        "osflab/container": "3.0.1",
-        "osflab/controller": "3.0.1",
-        "osflab/crypt": "3.0.1",
-        "osflab/db": "3.0.1",
-        "osflab/device": "3.0.1",
-        "osflab/doc-maker": "3.0.1",
-        "osflab/filter": "3.0.1",
-        "osflab/form": "3.0.1",
-        "osflab/generator": "3.0.1",
-        "osflab/helper": "3.0.1",
-        "osflab/image": "3.0.1",
-        "osflab/log": "3.0.1",
-        "osflab/navigation": "3.0.1",
-        "osflab/office": "3.0.1",
-        "osflab/pdf": "3.0.1",
-        "osflab/safety": "3.0.1",
-        "osflab/session": "3.0.1",
-        "osflab/stream": "3.0.1",
-        "osflab/validator": "3.0.1",
-        "osflab/view": "3.0.1"
+        "osflab/application": "3.0.2",
+        "osflab/bean": "3.0.2",
+        "osflab/cache": "3.0.2",
+        "osflab/config": "3.0.2",
+        "osflab/container": "3.0.2",
+        "osflab/controller": "3.0.2",
+        "osflab/crypt": "3.0.2",
+        "osflab/db": "3.0.2",
+        "osflab/device": "3.0.2",
+        "osflab/doc-maker": "3.0.2",
+        "osflab/filter": "3.0.2",
+        "osflab/form": "3.0.2",
+        "osflab/generator": "3.0.2",
+        "osflab/github": "3.0.2",
+        "osflab/helper": "3.0.2",
+        "osflab/image": "3.0.2",
+        "osflab/log": "3.0.2",
+        "osflab/navigation": "3.0.2",
+        "osflab/office": "3.0.2",
+        "osflab/pdf": "3.0.2",
+        "osflab/safety": "3.0.2",
+        "osflab/session": "3.0.2",
+        "osflab/stream": "3.0.2",
+        "osflab/validator": "3.0.2",
+        "osflab/view": "3.0.2"
     },
     "suggest": {
-        "osflab/container": "~3.0.1",
-        "osflab/controller": "~3.0.1",
-        "osflab/log": "~3.0.1",
-        "osflab/view": "~3.0.1",
-        "osflab/application": "~3.0.1"
+        "osflab/container": "~3.0.2",
+        "osflab/controller": "~3.0.2",
+        "osflab/log": "~3.0.2",
+        "osflab/view": "~3.0.2",
+        "osflab/application": "~3.0.2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
