--- a/src/Filter/composer.json
+++ b/src/Filter/composer.json
@@ -16,16 +16,16 @@
         "source": "https://github.com/osflab/filter"
     },
     "require": {
-        "php": "^7.1.0",
-        "zendframework/zend-filter": "2.7.2",
-        "osflab/exception": "~3.0.1",
-        "osflab/stream": "~3.0.1"
+        "php": "^7.1.3",
+        "zendframework/zend-filter": "~2.7.2",
+        "osflab/exception": "~3.0.2",
+        "osflab/stream": "~3.0.2"
     },
     "require-dev": {
-        "osflab/test": "~3.0.1"
+        "osflab/test": "~3.0.2"
     },
     "provide": {
-        "osflab/form": "3.0.1"
+        "osflab/form": "3.0.2"
     },
     "suggest": {
         "osflab/generator": "For the Filter quick access helper"
