--- a/src/Generator/composer.json
+++ b/src/Generator/composer.json
@@ -16,23 +16,23 @@
         "source": "https://github.com/osflab/generator"
     },
     "require": {
-        "php": "^7.1.0",
-        "osflab/exception": "~3.0.1",
-        "osflab/stream": "~3.0.1"
+        "php": "^7.1.3",
+        "osflab/exception": "~3.0.2",
+        "osflab/stream": "~3.0.2"
     },
     "require-dev": {
-        "zendframework/zend-code": "3.3.0"
+        "zendframework/zend-code": "~3.3.0"
     },
     "provide": {
-        "osflab/controller": "3.0.1",
-        "osflab/validator": "3.0.1"
+        "osflab/controller": "3.0.2",
+        "osflab/validator": "3.0.2"
     },
     "suggest": {
-        "zendframework/zend-db": "2.9.2",
-        "zendframework/zend-filter": "2.7.2",
-        "zendframework/zend-validator": "2.10.2",
-        "zendframework/zend-form": "2.11",
-        "zendframework/zend-view": "2.10.0",
+        "zendframework/zend-db": "~2.9.2",
+        "zendframework/zend-filter": "~2.7.2",
+        "zendframework/zend-validator": "~2.10.2",
+        "zendframework/zend-form": "~2.11",
+        "zendframework/zend-view": "~2.10.0",
         "osflab/filter": "Filters generation",
         "osflab/validator": "Validators generation",
         "osflab/view": "View helpers generation",
