--- a/src/Github/composer.json
+++ b/src/Github/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "osflab/config",
-    "description": "OSF config component",
+    "name": "osflab/github",
+    "description": "OSF github components manager",
     "version": "3.0.1-dev",
     "type": "library",
-    "homepage": "https://github.com/osflab/config",
+    "homepage": "https://github.com/osflab/github",
     "license": "AGPL-3.0-or-later",
     "authors": [
         {
@@ -12,26 +12,20 @@
         }
     ],
     "support": {
-        "issues": "https://github.com/osflab/config/issues",
-        "source": "https://github.com/osflab/config"
+        "issues": "https://github.com/osflab/github/issues",
+        "source": "https://github.com/osflab/github"
     },
     "require": {
         "php": "^7.1.3",
         "osflab/exception": "~3.0.2",
-        "osflab/stream": "~3.0.2"
-    },
-    "require-dev": {
-        "osflab/test": "~3.0.2"
-    },
-    "suggest": {
-        "osflab/form": "~3.0.2",
-        "osflab/db": "~3.0.2"
+        "osflab/stream": "~3.0.2",
+        "osflab/console": "~3.0.2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Osf\\Config\\": ""
+            "Osf\\Github\\": ""
         }
     }
 }
