--- a/src/Navigation/composer.json
+++ b/src/Navigation/composer.json
@@ -16,18 +16,18 @@
         "source": "https://github.com/osflab/navigation"
     },
     "require": {
-        "php": "^7.1.0",
-        "mobiledetect/mobiledetectlib": "2.8.30",
-        "osflab/application": "~3.0.1",
-        "osflab/view": "~3.0.1",
-        "osflab/container": "~3.0.1",
-        "osflab/stream": "~3.0.1",
-        "osflab/controller": "~3.0.1",
-        "osflab/exception": "~3.0.1",
-        "osflab/helper": "~3.0.1"
+        "php": "^7.1.3",
+        "mobiledetect/mobiledetectlib": "^2.8.30",
+        "osflab/application": "~3.0.2",
+        "osflab/view": "~3.0.2",
+        "osflab/container": "~3.0.2",
+        "osflab/stream": "~3.0.2",
+        "osflab/controller": "~3.0.2",
+        "osflab/exception": "~3.0.2",
+        "osflab/helper": "~3.0.2"
     },
     "require-dev": {
-        "osflab/test": "~3.0.1"
+        "osflab/test": "~3.0.2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
