--- a/src/Stream/composer.json
+++ b/src/Stream/composer.json
@@ -16,36 +16,37 @@
         "source": "https://github.com/osflab/stream"
     },
     "require": {
-        "php": "^7.1.0",
+        "php": "^7.1.3",
         "ext-mbstring": "*",
-        "soundasleep/html2text": "0.5.0",
-        "patchwork/utf8": "1.3.1",
-        "symfony/yaml": "3.4.4",
-        "osflab/exception": "~3.0.1",
-        "osflab/crypt": "~3.0.1",
-        "osflab/container": "~3.0.1"
+        "soundasleep/html2text": "^0.5.0",
+        "patchwork/utf8": "^1.3.1",
+        "symfony/yaml": "^4.0",
+        "osflab/exception": "~3.0.2",
+        "osflab/crypt": "~3.0.2",
+        "osflab/container": "~3.0.2"
     },
     "require-dev": {
-        "osflab/test": "~3.0.1"
+        "osflab/test": "~3.0.2"
     },
     "provide": {
-        "osflab/bean": "3.0.1",
-        "osflab/config": "3.0.1",
-        "osflab/controller": "3.0.1",
-        "osflab/db": "3.0.1",
-        "osflab/doc-maker": "3.0.1",
-        "osflab/filter": "3.0.1",
-        "osflab/form": "3.0.1",
-        "osflab/generator": "3.0.1",
-        "osflab/helper": "3.0.1",
-        "osflab/log": "3.0.1",
-        "osflab/navigation": "3.0.1",
-        "osflab/pdf": "3.0.1",
-        "osflab/validator": "3.0.1",
-        "osflab/view": "3.0.1"
+        "osflab/bean": "3.0.2",
+        "osflab/config": "3.0.2",
+        "osflab/controller": "3.0.2",
+        "osflab/db": "3.0.2",
+        "osflab/doc-maker": "3.0.2",
+        "osflab/filter": "3.0.2",
+        "osflab/form": "3.0.2",
+        "osflab/generator": "3.0.2",
+        "osflab/github": "3.0.2",
+        "osflab/helper": "3.0.2",
+        "osflab/log": "3.0.2",
+        "osflab/navigation": "3.0.2",
+        "osflab/pdf": "3.0.2",
+        "osflab/validator": "3.0.2",
+        "osflab/view": "3.0.2"
     },
     "suggest": {
-        "osflab/cache": "~3.0.1",
+        "osflab/cache": "~3.0.2",
         "ext-yaml": "For better performances"
     },
     "minimum-stability": "dev",
